samples/bookinfo/networking/.refactoring/generated/egress-rule-google-apis.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: googleapis
spec:
  hosts:
    - www.googleapis.com
  ports:
    - name: http
      number: 80
      protocol: HTTP
    - name: https
      number: 443
      protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: rewrite-port-for-googleapis
spec:
  hosts:
    - www.googleapis.com
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: www.googleapis.com
            port:
              number: 443
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: originate-tls-for-googleapis
spec:
  host: www.googleapis.com
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
